kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-game-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snake-game
  template:
    metadata:
      labels:
        app: snake-game
    spec:
      containers:
      - name: snake-game-container
        image: cguillo/snake-game:latest
        ports:
        - containerPort: 5000
