kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game-service
spec:
  selector:
    app: snake-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
