kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-game-ingress
spec:
  rules:
  - host: snake-dirag.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snake-game-service
            port:
              number: 80
